<resources>
    <string name="app_name">Warcraft 3 Reforged Units</string>
    <string name="elf_archer">Archer</string>
    <string name="elf_ballista">Balista</string>
    <string name="elf_cenarius">Cenarius</string>
    <string name="elf_chimera">Chimera</string>
    <string name="elf_dh">Demon hunter</string>
    <string name="elf_druid">Druid</string>
    <string name="elf_dryad">Dryad</string>
    <string name="elf_ent">Ent</string>
    <string name="elf_faerie_dragon">Faerie Dragon</string>
    <string name="elf_huntress">Huntress</string>
    <string name="elf_illidan">Illidan</string>
    <string name="elf_mountain_giant">Mountain Giant</string>
    <string name="elf_ridden_hippogryph">Ridden Hippogryph</string>
    <string name="elf_warden">Warden</string>
    <string name="horde_blademaster">Blademaster</string>
    <string name="horde_builder">Builder</string>
    <string name="horde_catapult">Catapult</string>
    <string name="horde_drekhar">Drekhar</string>
    <string name="horde_grom">Grommush</string>
    <string name="horde_grunt">Grunt</string>
    <string name="horde_guldan">Guldan</string>
    <string name="horde_head_hunter">Head Hunter</string>
    <string name="horde_kodo">Kodo</string>
    <string name="horde_samuro">Samuro</string>
    <string name="horde_shadow_hunter">Shadow Hunter</string>
    <string name="horde_shaman">Shaman</string>
    <string name="horde_tauren">Tauren</string>
    <string name="horde_thrall">Thrall</string>
    <string name="horde_voljin">Voljin</string>
    <string name="horde_warlord">Warlord</string>
    <string name="horde_wolfrider">Wolf Rider</string>
    <string name="horde_wyvern">Wyvern</string>
    <string name="undead_abomination">Abomination</string>
    <string name="undead_acolyte">Acolyte</string>
    <string name="undead_arthas">Arthas</string>
    <string name="undead_balnazar">Balnazar</string>
    <string name="undead_banshee">Banshee</string>
    <string name="undead_crypt_fiend">Crypt Fiend</string>
    <string name="undead_crypt_lord">Crypt Lord</string>
    <string name="undead_death_knight">Death Knight</string>
    <string name="undead_deceiver">Deceiver</string>
    <string name="undead_dreadlord">Dread Lord</string>
    <string name="undead_frostwyrm">Frost Wyvern</string>
    <string name="undead_gargoyle">Gargoyle</string>
    <string name="undead_lich">Lich</string>
    <string name="undead_meatwagon">Meatwagon</string>
    <string name="undead_skeleton">Skeleton</string>
    <string name="undead_sylvana">Sylvana</string>
    <string name="elf">elf</string>
    <string name="horde">horde</string>
    <string name="undead">undead</string>
    <string name="night_elfs">Night Elf</string>
    <string name="hordes">Horde</string>
    <string name="undeads">Undead</string>
    <string name="all_race">All Races</string>
    <string name="horde_army">Horde Army</string>
    <string name="elf_army">Elf Army</string>
    <string name="undead_army">Undead Army</string>
    <string name="race_army">Armies of all races</string>
    <string name="app_label">Warcraft 3 Reforged Units</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>